# paddle-plugin

./: .env.example  .gitattributes  .gitconfig  .gitignore  Build-RepoRawIndex.ps1  DEPENDENCY_CONSOLIDATION_PLAN.md  DEVELOPER_SETUP.md  ENVIRONMENT_TROUBLESHOOTING.md  MIGRATION_GUIDE.md  PNG_TO_MARKDOWN_ARCHITECTURE.md  PYWIN32_FIX_SUMMARY.md  README-MCP.md  README.md  Tesseract_OCR_Documentation.md  UNIFIED_SETUP_SUMMARY.md  WORKFLOW_CONFIRMATION.md  __init__.py  ag2_node_check.txt  ag2_python_check.txt  agent_manifest.yaml  agent_tools_map.yaml  anvil.yaml  audit_config_env.txt  audit_node_refs.txt  audit_python_imports.txt  audit_step2_matches.txt  audit_step2_summary.txt  cleanup.ps1  comprehensive_test_report.md  convert_png_to_md.py  create_memory_tables.sql  enhanced_ocr_formatter.py  environment_info.json  final_search_result.py  fix_pywin32_environment.py  health_check.py  improved_ocr_formatter.py  install-rag-system.js  kilocode_ocr_workflow.md  latest_log.txt  (+30 more)
.kilocode/: .kilocoderules  (+1 more)
simba/: .cursorignore  .dockerignore  .env.example  .flake8  .gitchangelog.rc  .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  celerybeat-schedule.db  config.yaml  noxfile.py  pyproject.toml  sample.txt  simba_config.yaml
simba/.github/: PULL_REQUEST_TEMPLATE.md
simba/.github/workflows/: ci_cd.yml  release-please.yml
simba/docker/: Dockerfile  README  docker-compose.yml  docker-entrypoint.sh
simba/docs/: .gitignore  ORGANIZATION_SETUP.md  README.md  README_ROLES.md  ROLES_SETUP.md  configuration.mdx  getting-started.mdx  iam.md  mint.json  overview.mdx  quickstart.mdx
simba/docs/api-reference/: overview.mdx
simba/docs/core-concepts/: rag-systems.mdx
simba/docs/examples/: chainlit-app.mdx  notebook-example.mdx  react-frontend.mdx  streamlit-app.mdx
simba/docs/quickstart/: cloud.mdx  self-hosted.mdx
simba/docs/sdk/: overview.mdx
simba/frontend/: .env.production  Dockerfile  README.md  docker-compose.yml  migi.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
simba/frontend/public/pdf-worker/: pdf.worker.min.js
simba/frontend/src/: App.tsx  MainLayout.tsx
simba/frontend/src/components/: ChatFrame.tsx  ChatMessage.tsx  FollowUpQuestions.tsx  SourcePanel.tsx  Sources.tsx  Thinking.tsx
simba/frontend/src/config/: index.ts
simba/frontend/src/context/: AuthContext.tsx
simba/frontend/src/hooks/: useDocumentManagement.ts
simba/frontend/src/lib/: api.ts  api_key_service.ts  api_services.ts  axiosConfig.ts  embedding_api.ts  ingestion_api.ts  organization_api.ts  parsing_api.ts  preview_api.ts  supabase.ts
simba/frontend/src/pages/: ApiKeysPage.tsx  ChatApp.tsx  DocumentManagementApp.tsx  KnowledgeConfigPage.tsx  OrganizationPage.tsx  RolesPage.tsx  SettingsPage.tsx
simba/frontend/src/types/: auth.ts  chat.ts  document.ts
simba/scripts/: install_llm.sh  migrate_local.sh
simba/simba/: .gitignore  README.md  __init__.py  __main__.py  cli.py
simba/simba/api/: api_key_routes.py  auth_routes.py  chat_routes.py  config_routes.py  database_routes.py  embedding_routes.py  ingestion_routes.py  organization_routes.py  parsing_routes.py  retriever_routes.py  role_routes.py  summarize_routes.py
simba/simba/api/dto/: retriever_dto.py
simba/simba/api/middleware/: __init__.py  auth.py
simba/simba/auth/: __init__.py  api_key_service.py  auth_service.py  models.py  organization_service.py  role_service.py  supabase_client.py
simba/simba/chatbot/demo/: graph.py  state.py
simba/simba/core/: .README.md  celery_config.py  config.py
simba/simba/core/factories/: database_factory.py  embeddings_factory.py  llm_factory.py  storage_factory.py  vector_store_factory.py
simba/simba/core/utils/: logger.py
simba/simba/database/: __init__.py  base.py  litedb_service.py  postgres.py  token_models.py
simba/simba/embeddings/: __init__.py  embedding_service.py  utils.py
simba/simba/ingestion/: __init__.py  document_ingestion.py  file_handling.py  loader.py  summary.py  utils.py
simba/simba/models/: api_key.py  organization.py  role.py  simbadoc.py  user.py
simba/simba/organizations/: organization_service.py
simba/simba/parsing/: base.py  docling_parser.py  markitdown_parser.py  mistral_ocr.py
simba/simba/retrieval/: __init__.py  base.py  default.py  ensemble.py  factory.py  hybrid.py  keyword.py  retriever.py  semantic.py
simba/simba/scripts/: __init__.py
simba/simba/splitting/: splitter.py
simba/simba/storage/: base.py  local.py  minio.py  supabase_storage.py
simba/simba/supabase/: README.md  config.toml
simba/simba/supabase/migrations/: 001_extensions_global_functions.sql  002_roles_permissions.sql  003_organizations.sql  004_documents.sql  005_chunks_embeddings.sql  006_api_keys.sql  007_final_grants.sql  008_add_service_role_grants.sql  009_organization_rls_policies.sql  010_fix_schema_permissions.sql  011_fix_recursive_policies.sql  012_fix_recursion_properly.sql  013_add_tenant_id_to_api_keys.sql  014_storage_bucket.sql  015_add_collections.sql  016_organization_scoped_roles.sql  017_postgres_audit_trigger.sql  018_fix_audit_trigger.sql
simba/simba/tasks/: generate_summary.py  ingestion_tasks.py  parsing_tasks.py
simba/simba/tests/: conftest.py
simba/simba/tests/e2e/: test_postgres.py  test_supabase_connection.py
simba/simba/tests/unit/: test_auth_routes.py  test_ingestion.py
simba/simba/vector_store/: __init__.py  base.py  pgvector.py  vector_store_service.py
simba/simba_sdk/: .gitignore  README.md  __init__.py  pyproject.toml  setup.py
simba/simba_sdk/docs/: api_reference.md  embeddings.md  index.md  installation.md  migration.md  parsing.md  quickstart.md  synchronous_parsing.md  troubleshooting.md
simba/simba_sdk/examples/: quick_start.ipynb  retrieve_test.py
simba/simba_sdk/simba_sdk/: __init__.py  chat.py  client.py  document.py  embed.py  parser.py  retrieve.py
simba/simba_sdk/tests/: test_chat.py  test_client.py  test_document.py  test_embed.py  test_parser.py  test_retrieve.py
simba/tests/parsing/: test_mistral_ocr.py
simba/tests/sdk/: test_sdk.py
(+758 files in other folders)
